2005-03-30 Alain Magloire
	Delay the processing/parsing of the WorkingCopy when creating the workingcopy
	This should speed the opening  of the CEditor.
	PR 74182
	* model/org/eclipse/cdt/internal/core/model/CReateWorkingCipyOperation.java

2005-03-30 Alain Magloire
	PR 88858 implementation.
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/core/model/IIncludeFileEntry.java
	* model/org/eclipse/cdt/core/model/IMacroFileEntry.java
	* model/org/eclipse/cdt/core/model/IPathEntry.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	* model/org/eclipse/cdt/internal/core/model/DefaultPathEntryStore.java
	* model/org/eclipse/cdt/internal/core/model/IncludeFileEntry.java
	* model/org/eclipse/cdt/internal/core/model/MacroFileEntry.java
	* model/org/eclipse/cdt/internal/core/model/PathEntry.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryUtil.java
	* src/org/eclipse/cdt/core/resources/ScannerInfo.java
	* src/org/eclipse/cdt/core/resources/ScannerProvider.java

2005-03-30 Vladimir Hirsl
	Fix for NPE in IndexEncoderUtil.calculateIndexFlags
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexEncoderUtil.java

2005-03-29 Vladimir Hirsl
	Problem markers for DOM AST based indexer.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/search/indexing/IIndexEncodingConstants.java

2005-03-28 Bogdan Gheorghe
	Modified DeltaProcessor to make use of ICDTIndexer elements when requesting an index for an element.
	Added indextiming option to trace options in CCorePlugin.
	Added new CTagsIndexer
	
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java